# ai_solutions_first_agent

./: .env.example  .gitignore  README.md  pyproject.toml  questions.md  report.md  script.py
data/: merged_cleaned.csv  merged_cleaned.json
src/ai_solutions/: crew.py  main.py
src/ai_solutions/config/: agents.yaml  tasks.yaml
src/ai_solutions/tools/: CSVtoJSONConverterTool.py  csv_cleaner_merger_to_json_converter_tool.py  csv_cleaner_merger_tool.py
src/web/: app.py
